# sokol_things

./: CMakeLists.txt  README.md  main.c
shaders/: triangle.glsl  triangle.h
